--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <footer>
         <p>© 2024 Elotecos</p>
         <div class="social-icons">
-            <a href="https://www.facebook.com/tuperfil" target="_blank">
+            <a href="https://www.facebook.com/elotecoslasamericas/" target="_blank">
                 <img src="Logo_fb.png" alt="Facebook" style="width: 24px; height: 24px;">
             </a>
-            <a href="https://www.instagram.com/tuperfil" target="_blank">
+            <a href="https://www.instagram.com/elotecos_las_americas/" target="_blank">
                 <img src="Logo_insta.png" alt="Instagram" style="width: 24px; height: 24px;">
             </a>
         </div>
