--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,16 @@
         
         <label for="customer-phone">Número para contactar:</label>
         <input type="text" id="customer-phone" placeholder="Tu número de teléfono">
+
+        <label for="customer-address">Dirección:</label>
+        <input type="text" id="customer-address" placeholder="Tu dirección">
+
+        <label for="customer-payment">Método de pago:</label>
+        <select id="customer-payment">
+            <option value="Efectivo (cambio exacto)">Efectivo (cambio exacto)</option>
+            <option value="Efectivo (con cambio)">Efectivo (con cambio)</option>
+            <option value="Transferencia">Transferencia</option>
+        </select>
     </div>
     <div id="cart-items"></div>
     <div id="cart-total">Total: $0.00</div>
