--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="cart.css">
 </head>
 <body>
+    <a href="index.html" class="back-arrow">
+        &#8592; <span>Regresar</span>
+    </a>
     <h1>Orden hasta el momento</h1>
     
     <div id="cart-items"></div>
