--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <img src="Logo_Elotecos.png" alt="Logo_Elotecos" class="logo">
-        <h1>Los Elotecos</h1>
+        <h1>Los Elotecos</h1>        
+        <!--
+        <a href="eventos.html" class="event-button">Eventos</a>
+        -->
         <div id="open-info">
             <div id="status-container">
                 <span id="status-bullet" class="bullet"></span>
